# agentic-doctor-appointment-system

./: .env.example  .env.production  .env.template  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  logging.conf  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py  tailwind.config.js  test-connection.js  vercel.json
app/: main.py
app/api/: agent_routes.py
app/models/: request_model.py  request_models.py  response_models.py
app/routes/: agent_routes.py
data/: doctor_availability.csv
notebooks/: data-models.ipynb  experiment-1.ipynb
notebooks/toolkit/: appointment_tools.ipynb  availability-tools.ipynb
notebooks/utils/: llm.ipynb
scripts/: check_system_status.py  deploy.sh  deploy_render.sh  setup_dev.sh  test-build.sh
src/: App.css  App.tsx  index.css
src/agents/: appointment_agent.py  multi_agent_system.py
src/api/: __init__.py  agentApi.ts  chatApi.ts  chat_endpoints.py
src/components/: AppointmentForm.tsx  ChatInterface.tsx  ChatWindow.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  MessageBubble.tsx  Sidebar.tsx  StatusIndicator.tsx
src/config/: __init__.py  settings.py
src/models/: data_models.py
src/pages/: BookAppointment.tsx  CancelReschedule.tsx  GeneralQuery.tsx  (+1 more)
tests/: __init__.py  test_logging.py  test_memory_integration.py  test_multi_agent.py  test_persistent_chat.py  test_tools_comprehensive.py
ui/: README.md  app.py  enhanced_app.py  requirements.txt  run_enhanced_app.py  test_enhanced_ui.py
(+15 files in other folders)
