[project]
name = "doctors-appointment-agent"
version = "0.1.0"
description = "a multi-agent system for booking appointments with doctors in hospitals"
authors = [
    {name = "oladimeji balogun",email = "oladimejib.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain-groq (>=0.3.8,<0.4.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.35,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
